WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281021
[WebRTC] Crash in webrtc::field_trial::FindFullName() calling strlen() on freed C-string
https://bugs.webkit.org/show_bug.cgi?id=281021
Summary
[WebRTC] Crash in webrtc::field_trial::FindFullName() calling strlen() on fre...
David Kilzer (:ddkilzer)
Reported
2024-10-07 17:19:33 PDT
Crash in webrtc::field_trial::FindFullName() calling strlen() on freed C-string. Caused by: Add an experimental flag for WebRTC L4S support <
https://bugs.webkit.org/show_bug.cgi?id=280571
> <
rdar://136896745
> <
https://commits.webkit.org/284477@main
>
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2024-10-07 17:19:46 PDT
<
rdar://137463467
>
David Kilzer (:ddkilzer)
Comment 2
2024-10-07 17:31:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34811
EWS
Comment 3
2024-10-07 20:35:55 PDT
Committed
284806@main
(ca00a6a0f5f9): <
https://commits.webkit.org/284806@main
> Reviewed commits have been landed. Closing PR #34811 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug