[WebRTC] Crash in webrtc::field_trial::FindFullName() calling strlen() on freed C-string <https://bugs.webkit.org/show_bug.cgi?id=281021> <rdar://137463467>

Reviewed by Chris Dumez.

* Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
(WebCore::LibWebRTCMediaEndpoint::LibWebRTCMediaEndpoint):
- webrtc::field_trial::InitFieldTrialsFromString() keeps a reference to
  the C-string passed in, but it does not make its own copy of it, so
  either a global string or a "leaked" copy must be passed in.  This
  changes the LibWebRTCMediaEndpoint() constructor to create two global
  strings and to use whichever one is needed.

Canonical link: https://commits.webkit.org/284806@main